		* It can list all resource ids tied to particular type
		* It no longer prevents two resources of distinct types not be able to have the same ID
 * Minor changes:
	 * Documentation changes:
		* Added documentation for `dgm::JsonLoader`
		* Added documentation on CMake integration
	 * Warning about name shadowing has been turned into error
	 * Math constants have been removed, they are superseded by `std::numbers` from `<numbers>`

dgm-lib v1.10.0
 * `dgm::ResourceManager` can now load `dgm::Clip` from JSON files
 * `dgm:Clip` no longer has to be moved into `dgm::TileMap`
 * `dgm::Camera` no longer maintains a reference to `sf::View` and instead provides API `getCurrentView()` and `getDefaultView()`
	* This prevents an issue where View could be passed down to Camera before being properly initialize and zooming would then be broken
	* It also prevents possible memory leak where the View would be destroyed before Camera

dgm-lib v1.9.0
 * `dgm::Animation` no longer depends on `sf::Sprite`
	* Use `dgm::Animation::getCurrentFrame()` instead
 * Bumped nlohmann json to v3.11.2
	* This resolves a warning about `<ciso646>` being removed in C++20

dgm-lib v1.8.2
 * Added basic collision detection between VisionCone and Point
 * Fixed dgm::Controller::getValue returning 1.f when mouse button wasn't bound to given input code
	* NOTE: sf::Mouse::isButtonPressed(sf::Mouse::ButtonCount) can return true for whatever reason
 * Fixed dgm::Controller::getValue returning 1.f when keyboard key wasn't bound to given input code
	* NOTE: sf::Keybard::isKeyPressed(sf::Keyboard::Unknown) can return true for whatever reason
 * Fixed missing virtual destructor on dgm::AbstractController

dgm-lib v1.8.1
 * Removed dshlibs includes from final package

dgm-lib v1.8.0
 * Removed dsh::Config dependency in dgm::Window
	* Replaced with dgm::WindowSettings
 * Removed dsh::LevelD dependency in dgm::Mesh, dgm::TileSet and dgm::Path
	* This only affected overloaded convenience constructors
