@@ -21,7 +21,8 @@ namespace dgm
         template<IsSfVector T>
         struct less
         {
-            [[nodiscard]] bool operator()(const T& a, const T& b) const
+            [[nodiscard]] constexpr inline bool
+            operator()(const T& a, const T& b) const noexcept
             {
                 return a.y == b.y ? a.x < b.x : a.y < b.y;
             }
