@@ -97,7 +97,7 @@ dgm::JsonLoader::loadAnimationsFromStream(std::istream& stream) const
 
         if (frame.x == 0u || frame.y == 0u)
         {
-            throw dgm::ResourceException(std::format(
+            throw dgm::Exception(std::format(
                 "No frame was defined either in defaults block or for state {}",
                 name));
         }
